--- a/4.6.0/aspnet-core/src/HydraTestProject.Application/HydraTestProject.Application.csproj
+++ b/4.6.0/aspnet-core/src/HydraTestProject.Application/HydraTestProject.Application.csproj
@@ -13,4 +13,9 @@
   <ItemGroup>
     <ProjectReference Include="..\HydraTestProject.Core\HydraTestProject.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Mvc.Abstractions">
+      <HintPath>..\..\..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.mvc.abstractions\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Mvc.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
