--- a/4.6.0/aspnet-core/src/HydraTestProject.Core/HydraTestProject.Core.csproj
+++ b/4.6.0/aspnet-core/src/HydraTestProject.Core/HydraTestProject.Core.csproj
@@ -15,6 +15,14 @@
     <EmbeddedResource Include="Localization\SourceFiles\*.xml" Exclude="bin\**;obj\**;**\*.xproj;packages\**;@(EmbeddedResource)" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="MultiTenancy\Mname.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MultiTenancy\Mname.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Abp.AutoMapper" Version="4.3.0" />
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="4.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.0" />
