--- a/4.6.0/aspnet-core/src/HydraTestProject.Migrator/HydraTestProject.Migrator.csproj
+++ b/4.6.0/aspnet-core/src/HydraTestProject.Migrator/HydraTestProject.Migrator.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Abp.Castle.Log4Net" Version="4.3.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HydraTestProject.Core\HydraTestProject.Core.csproj" />
