--- a/4.6.0/aspnet-core/src/HydraTestProject.Application/HydraTestProject.Application.csproj
+++ b/4.6.0/aspnet-core/src/HydraTestProject.Application/HydraTestProject.Application.csproj
@@ -11,6 +11,9 @@
     <RootNamespace>HydraTestProject</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\HydraTestProject.Core\HydraTestProject.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
