--- a/4.6.0/aspnet-core/src/HydraTestProject.Core/HydraTestProject.Core.csproj
+++ b/4.6.0/aspnet-core/src/HydraTestProject.Core/HydraTestProject.Core.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <PackageReference Include="Abp.AutoMapper" Version="4.3.0" />
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="4.3.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="2.2.0" />
