--- a/4.6.0/aspnet-core/src/HydraTestProject.Web.Core/HydraTestProject.Web.Core.csproj
+++ b/4.6.0/aspnet-core/src/HydraTestProject.Web.Core/HydraTestProject.Web.Core.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\HydraTestProject.EntityFrameworkCore\HydraTestProject.EntityFrameworkCore.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
