--- a/4.6.0/aspnet-core/src/HydraTestProject.Web.Host/appsettings.json
+++ b/4.6.0/aspnet-core/src/HydraTestProject.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-O4MV1PS\\SQLEXPRESS; Database=HydraTestProjectDb; Trusted_Connection=True;"
+    "Default": "Server=DESKTOP-O4MV1PS\\SQLEXPRESS; Database=HydraTestProjectDb; Trusted_Connection=True; MultipleActiveResultSets = True"
   },
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
