--- a/4.6.0/aspnet-core/test/HydraTestProject.Tests/HydraTestProject.Tests.csproj
+++ b/4.6.0/aspnet-core/test/HydraTestProject.Tests/HydraTestProject.Tests.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\..\src\HydraTestProject.EntityFrameworkCore\HydraTestProject.EntityFrameworkCore.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="NSubstitute" Version="3.1.0" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
