--- a/4.6.0/aspnet-core/src/HydraTestProject.Web.Host/HydraTestProject.Web.Host.csproj
+++ b/4.6.0/aspnet-core/src/HydraTestProject.Web.Host/HydraTestProject.Web.Host.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.1">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
